ta-connector/main/default/objects/Total_Agility_Process_Configurations__mdt/Total_Agility_Process_Configurations__mdt.object-meta.xml
<CustomObject>
    <label>TotalAgility Process Configurations</label>
    <pluralLabel>TotalAgility Process Configurations</pluralLabel>
</CustomObject>