ta-connector/main/default/objects/Total_Agility_Process_Configurations__mdt/fields/Callback_Execution_Method__c.field-meta.xml
<CustomField>
    <fullName>Callback_Execution_Method__c</fullName>
    <description>Select the method where the Process response callback logic is written or configured</description>
    <label>Callback Execution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>