ta-connector/main/default/objects/Total_Agility_Process_Configurations__mdt/fields/Callback_Logi_Apex_or_Flow_name__c.field-meta.xml
<CustomField>
    <fullName>Callback_Logi_Apex_or_Flow_name__c</fullName>
    <description>Call back Apex or FLow name which is going to process the response received from TotalAgility.</description>
    <label>Callback Logic Apex or Flow name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>