ta-connector/main/default/objects/Total_Agility_Process_Configurations__mdt/fields/Callback_Logic_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Callback_Logic_Namespace__c</fullName>
    <description>Namespace for Callback logic.</description>
    <label>Callback Logic Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>