ta-connector/main/default/objects/Total_Agility_Process_Configurations__mdt/fields/Total_Agility_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Total_Agility_Process_Name__c</fullName>
    <description>The Process to be invoked in TotalAgility</description>
    <label>TotalAgility Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>